--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,5 @@
-﻿<Application x:Class="PokeBattle_Hamed.App"
+﻿<Application x:Class="PokemonLike.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PokeBattle_Hamed"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
 </Application>
