--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,18 @@
-﻿<Window x:Class="PokeBattle_Hamed.MainWindow"
+﻿<Window x:Class="PokemonLike.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PokeBattle_Hamed"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="Pokemon Like" Height="400" Width="600">
+    <Grid Background="White">
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Margin="20">
+            <TextBlock Text="Lien de la base de données" FontSize="16" FontWeight="Bold" Margin="0,0,0,10" />
+            <TextBox Name="DatabaseLinkTextBox" Width="300" Height="30" Margin="0,0,0,10">
+                <TextBox.Text>
+                    <!-- Placeholder text avec un Binding local si nécessaire -->
+                    Entrez le lien ici...
+                </TextBox.Text>
+            </TextBox>
+            <Button Content="Sign Up" Width="200" Height="40" Margin="0,10,0,0" Click="SignUpButton_Click" />
+            <Button Content="Login" Width="200" Height="40" Click="LoginButton_Click" />
+        </StackPanel>
     </Grid>
 </Window>
