--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,12 +5,7 @@
     <Grid Background="White">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Margin="20">
             <TextBlock Text="Lien de la base de données" FontSize="16" FontWeight="Bold" Margin="0,0,0,10" />
-            <TextBox Name="DatabaseLinkTextBox" Width="300" Height="30" Margin="0,0,0,10">
-                <TextBox.Text>
-                    <!-- Placeholder text avec un Binding local si nécessaire -->
-                    Entrez le lien ici...
-                </TextBox.Text>
-            </TextBox>
+            <TextBox Name="DatabaseLinkTextBox" Width="300" Height="30" Margin="0,0,0,10" />
             <Button Content="Sign Up" Width="200" Height="40" Margin="0,10,0,0" Click="SignUpButton_Click" />
             <Button Content="Login" Width="200" Height="40" Click="LoginButton_Click" />
         </StackPanel>
