--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,13 +1,16 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Pokemon Like" Height="400" Width="600">
+        Title="Connexion à la base de données" Height="400" Width="600">
+
     <Grid Background="White">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Margin="20">
-            <TextBlock Text="Lien de la base de données" FontSize="16" FontWeight="Bold" Margin="0,0,0,10" />
-            <TextBox Name="DatabaseLinkTextBox" Width="300" Height="30" Margin="0,0,0,10" />
-            <Button Content="Sign Up" Width="200" Height="40" Margin="0,10,0,0" Click="SignUpButton_Click" />
-            <Button Content="Login" Width="200" Height="40" Click="LoginButton_Click" />
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="300">
+            <TextBlock Text="Entrez le lien de la base de données" FontSize="16" FontWeight="Bold" Margin="0,0,0,20" />
+
+            <!-- Remplacer PlaceholderText par Text pour un texte par défaut dans le TextBox -->
+            <TextBox x:Name="DatabaseLinkTextBox" Width="300" Height="30" Margin="0,10" Text="Lien de la base de données" />
+
+            <Button Content="Valider" Width="200" Height="40" Margin="0,20" Click="ValidateConnectionButton_Click" />
         </StackPanel>
     </Grid>
 </Window>
