--- a/MVVM/View/FightView.xaml
+++ b/MVVM/View/FightView.xaml
@@ -4,37 +4,24 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        d:DesignHeight="450" d:DesignWidth="800"
-        Title="Fight">
+        Title="FightView" Height="450" Width="800">
     <Grid>
-        <!-- Disposition en deux colonnes pour afficher deux monstres -->
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+        <!-- Affichage du score -->
+        <Label x:Name="ScoreLabel" Content="Score: 0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" FontSize="16" FontWeight="Bold"/>
 
-        <!-- Monstre de gauche (joueur) -->
-        <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
-            <!-- Image du monstre -->
-            <Image x:Name="PlayerMonsterImage" Width="200" Height="200" Margin="10" />
-            <!-- Nom du monstre -->
-            <TextBlock x:Name="PlayerMonsterName" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="5" />
-            <!-- Points de vie du monstre -->
-            <TextBlock x:Name="PlayerMonsterHealth" FontSize="16" HorizontalAlignment="Center" Margin="5" />
-            <!-- Liste des sorts -->
-            <StackPanel x:Name="PlayerMonsterSpells" Margin="10">
-                <TextBlock Text="Spells:" FontSize="16" FontWeight="Bold" Margin="5" />
-            </StackPanel>
+        <!-- Affichage des informations du Pokémon du joueur -->
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0">
+            <TextBlock x:Name="PlayerMonsterName" FontSize="20" FontWeight="Bold"/>
+            <TextBlock x:Name="PlayerMonsterHealth"/>
+            <Image x:Name="PlayerMonsterImage" Width="150" Height="150" />
+            <StackPanel x:Name="PlayerMonsterSpells" Orientation="Vertical"/>
         </StackPanel>
 
-        <!-- Monstre de droite (adversaire aléatoire) -->
-        <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
-            <!-- Image du monstre -->
-            <Image x:Name="OpponentMonsterImage" Width="200" Height="200" Margin="10" />
-            <!-- Nom du monstre -->
-            <TextBlock x:Name="OpponentMonsterName" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="5" />
-            <!-- Points de vie du monstre -->
-            <TextBlock x:Name="OpponentMonsterHealth" FontSize="16" HorizontalAlignment="Center" Margin="5" />
+        <!-- Affichage des informations du Pokémon adverse -->
+        <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,50,10,0">
+            <TextBlock x:Name="OpponentMonsterName" FontSize="20" FontWeight="Bold"/>
+            <TextBlock x:Name="OpponentMonsterHealth"/>
+            <Image x:Name="OpponentMonsterImage" Width="150" Height="150" />
         </StackPanel>
     </Grid>
 </Window>
